Fix background clipping on small window sizes

--- a/htdocs/site_media/css/site.css
+++ b/htdocs/site_media/css/site.css
@@ -128,6 +128,7 @@ body {
   font-size: 13px;
   font-family: verdana;
   background-position: 0px -90px;
+  min-width: 870px;
 }
 body.alt {
   background-image: url("../images/bg-alt.png");
